fix overflow issue

--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@
 html {
   scroll-behavior: smooth;
   scroll-padding: 20px;
+  overflow-x: hidden;
 }
 
 body {
